// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`failed state 1`] = `
.c4 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #FF6257;
  color: #000000;
}

.c4 a {
  color: #FFFFFF;
}

.c0 {
  box-sizing: border-box;
  margin-top: 48px;
  border: 1px solid;
  border-color: #0C143D;
}

.c1 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  padding-bottom: 4px;
  background-color: #0C143D;
}

.c3 {
  box-sizing: border-box;
  padding: 16px;
  background-color: #344179;
}

.c5 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c14 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c17 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c17:hover,
.c17:focus {
  background: #B29DFF;
}

.c17:active {
  background: #C5B6FF;
}

.c17:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
  margin-right: 16px;
}

.c13 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
}

.c15 {
  color: #FFFFFF;
  display: block;
  font-size: 12px;
  width: 100%;
  margin-bottom: 4px;
}

.c6 {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.c12 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
}

.c7 {
  display: flex;
  align-items: center;
  cursor: pointer;
}

.c10 {
  display: flex;
  align-items: center;
  cursor: not-allowed;
}

.c8 {
  margin: 0 8px 0 0;
  accent-color: #9F85FF;
  cursor: inherit;
}

.c9 {
  opacity: 1;
}

.c11 {
  opacity: 0.5;
}

.c16 {
  box-sizing: border-box;
  max-width: 500px;
  padding: 8px;
  height: 150px;
  width: 100%;
  color: #FFFFFF;
  border: 1px solid;
  border-radius: 4px;
  border-color: rgba(255,255,255,0.54);
  outline: none;
  background: transparent;
}

.c16::placeholder {
  color: rgba(255,255,255,0.54);
}

.c16:hover,
.c16:focus,
.c16:active {
  border: 1px solid rgba(255,255,255,0.72);
}

<div>
  <div
    class="c0"
    style="position: relative;"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        loggedInUsername
         - add a review
      </div>
    </div>
    <div
      class="c3"
    >
      <div
        class="c4"
        kind="danger"
      >
        server error
      </div>
      <div
        class="c5"
      >
        <div
          class="c6"
        >
          <label
            class="c7"
          >
            <input
              checked=""
              class="c8"
              name="requestState"
              type="radio"
              value="DENIED"
            />
            <span
              class="c9"
            >
              Reject request
            </span>
          </label>
          <label
            class="c7"
          >
            <input
              class="c8"
              name="requestState"
              type="radio"
              value="APPROVED"
            />
            <span
              class="c9"
            >
              Approve short-term access
               (12 hours)
            </span>
          </label>
          <label
            class="c10"
          >
            <input
              class="c8"
              disabled=""
              name="requestState"
              type="radio"
              value="PROMOTED"
            />
            <span
              class="c11"
            >
              <span>
                <div
                  class="c12"
                >
                  <div
                    class="c13"
                  >
                    Approve long-term access via Access List with the requested roles
                  </div>
                  
                </div>
              </span>
            </span>
          </label>
        </div>
      </div>
      <div
        class="c14"
      >
        <label
          class="c15"
          font-size="0"
        >
          Message
        </label>
        <textarea
          class="c16"
          color="text.main"
          height="150px"
          placeholder="Optional message..."
          width="100%"
        />
      </div>
      <button
        class="c17"
        kind="primary"
      >
        Submit Review
      </button>
    </div>
  </div>
</div>
`;

exports[`loaded state 1`] = `
.c0 {
  box-sizing: border-box;
  margin-top: 48px;
  border: 1px solid;
  border-color: #0C143D;
}

.c1 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  padding-bottom: 4px;
  background-color: #0C143D;
}

.c3 {
  box-sizing: border-box;
  padding: 16px;
  background-color: #344179;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c13 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c16 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c16:hover,
.c16:focus {
  background: #B29DFF;
}

.c16:active {
  background: #C5B6FF;
}

.c16:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
  margin-right: 16px;
}

.c12 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
}

.c14 {
  color: #FFFFFF;
  display: block;
  font-size: 12px;
  width: 100%;
  margin-bottom: 4px;
}

.c5 {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.c11 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
}

.c6 {
  display: flex;
  align-items: center;
  cursor: pointer;
}

.c9 {
  display: flex;
  align-items: center;
  cursor: not-allowed;
}

.c7 {
  margin: 0 8px 0 0;
  accent-color: #9F85FF;
  cursor: inherit;
}

.c8 {
  opacity: 1;
}

.c10 {
  opacity: 0.5;
}

.c15 {
  box-sizing: border-box;
  max-width: 500px;
  padding: 8px;
  height: 150px;
  width: 100%;
  color: #FFFFFF;
  border: 1px solid;
  border-radius: 4px;
  border-color: rgba(255,255,255,0.54);
  outline: none;
  background: transparent;
}

.c15::placeholder {
  color: rgba(255,255,255,0.54);
}

.c15:hover,
.c15:focus,
.c15:active {
  border: 1px solid rgba(255,255,255,0.72);
}

<div>
  <div
    class="c0"
    style="position: relative;"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        loggedInUsername
         - add a review
      </div>
    </div>
    <div
      class="c3"
    >
      <div
        class="c4"
      >
        <div
          class="c5"
        >
          <label
            class="c6"
          >
            <input
              checked=""
              class="c7"
              name="requestState"
              type="radio"
              value="DENIED"
            />
            <span
              class="c8"
            >
              Reject request
            </span>
          </label>
          <label
            class="c6"
          >
            <input
              class="c7"
              name="requestState"
              type="radio"
              value="APPROVED"
            />
            <span
              class="c8"
            >
              Approve short-term access
               (12 hours)
            </span>
          </label>
          <label
            class="c9"
          >
            <input
              class="c7"
              disabled=""
              name="requestState"
              type="radio"
              value="PROMOTED"
            />
            <span
              class="c10"
            >
              <span>
                <div
                  class="c11"
                >
                  <div
                    class="c12"
                  >
                    Approve long-term access via Access List with the requested roles
                  </div>
                  
                </div>
              </span>
            </span>
          </label>
        </div>
      </div>
      <div
        class="c13"
      >
        <label
          class="c14"
          font-size="0"
        >
          Message
        </label>
        <textarea
          class="c15"
          color="text.main"
          height="150px"
          placeholder="Optional message..."
          width="100%"
        />
      </div>
      <button
        class="c16"
        kind="primary"
      >
        Submit Review
      </button>
    </div>
  </div>
</div>
`;
